// Copyright Offene Werkstatt WÃ¤denswil
// SPDX-License-Identifier: MIT

syntax = "proto3";

package maco.proto.firebase_rpc;

import "common.proto";
import "pw_protobuf_protos/field_options.proto";

// Active user session with permissions
message TokenSession {
  // NTag UUID
  maco.proto.TagUid token_id = 1;
  // Firebase session ID
  maco.proto.FirebaseId session_id = 2;
  // Session expiration date (unix timestamp)
  int64 expiration = 3;
  // Firebase user ID
  maco.proto.FirebaseId user_id = 4;
  // Display name for the user
  string user_label = 5 [(pw.protobuf.pwpb).max_size = 64];
  // Firebase permission IDs granted for the user (uses callback)
  repeated maco.proto.FirebaseId permissions = 6;
}

// StartSession RPC - attempts to start a session with a known tag
message StartSessionRequest {
  maco.proto.TagUid token_id = 1;
}

message StartSessionResponse {
  oneof result {
    // Session successfully started
    TokenSession session = 1;
    // Authentication required (tag not yet authenticated)
    AuthRequired auth_required = 2;
    // Session rejected (user not allowed, tag unknown, etc.)
    Rejected rejected = 3;
  }
}

// Tag requires 3-pass mutual authentication
message AuthRequired {}

// Session request was rejected
message Rejected {
  // User-readable message
  string message = 1 [(pw.protobuf.pwpb).max_size = 128];
}

// AuthenticateNewSession RPC - initiates 3-pass mutual authentication
message AuthenticateNewSessionRequest {
  maco.proto.TagUid token_id = 1;
  // Challenge generated by NTag (RndB)
  bytes ntag_challenge = 2 [(pw.protobuf.pwpb).max_size = 16];
}

message AuthenticateNewSessionResponse {
  // Newly generated session ID
  maco.proto.FirebaseId session_id = 1;
  // Combined NTag challenge response and challenge generated by cloud
  bytes cloud_challenge = 2 [(pw.protobuf.pwpb).max_size = 32];
}

// CompleteAuthentication RPC - completes 3-pass mutual authentication
message CompleteAuthenticationRequest {
  // Session ID from AuthenticateNewSessionResponse
  maco.proto.FirebaseId session_id = 1;
  // NTag challenge response
  bytes encrypted_ntag_response = 2 [(pw.protobuf.pwpb).max_size = 32];
}

message CompleteAuthenticationResponse {
  oneof result {
    // Authentication successful, session established
    TokenSession session = 1;
    // Authentication failed
    Rejected rejected = 2;
  }
}
